@@ -2125,6 +2125,8 @@ $p^k$, $k > 1$, assuming $p$ is an odd prime.
 \fun{ulong}{pgener_Fl_local}{ulong p, GEN L}, see \kbd{gener\_Fp\_local},
 \kbd{L} is an \kbd{Flv}.
 
+\fun{ulong}{factorial_Fl}{long n, ulong p} return $n!$ mod $p$.
+
 \subsec{Modular kernel with ``precomputed inverse''}
 
 This is based on an algorithm by T. Grandlund and N. M\"{o}ller in
